# ask_chat_ip_addresses_geolocation

./: Dockerfile  README.md  docker-compose.yml  list_of_countries.xlsx  main.py  pyproject.toml  requirements.txt  test_vr_ip_chat_research.py
tests/: test_main.py
